--- a/LAYOUT/CSS/common.css
+++ b/LAYOUT/CSS/common.css
@@ -1,4 +1,59 @@
 
 
 
-* { color: skyblue; }
+{ color: skyblue; }
+
+.navbar-brand {
+  background: url("/IMG/sureshot_logo.gif") no-repeat left center;
+  background-size: contain;
+  height: 50px;
+  width: 250px;
+}
+
+.navbar .container .btn.btn-navbar {
+        float: left !important;
+}
+
+/* 固定するのは「position: fixed;」です。 */
+#navi {
+  height: 50px;
+  position: fixed;
+  z-index: 999;
+}
+/* スクロールする場所：固定ナビゲーションの高さ＋余白をpadding-topに指定したりします。 */
+#content {
+  padding: 60px 0 0 0;
+}
+/* slide in menu */
+.scrollable-menu {
+                height: auto;
+                max-height: 500px;
+                overflow-x: hidden;
+}
+
+/*HALF SLIDER*/
+.carousel-inner img {
+    margin:0 auto;
+    display:block;
+}
+
+/*背景画像フル*/
+body {
+  /* 画像ファイルの指定 */
+  background-image: url(/IMG/bike-custom-unbreakable-motorcycle.jpg);
+
+  /* 画像を常に天地左右の中央に配置 */
+  background-position: center center;
+
+  /* 画像をタイル状に繰り返し表示しない */
+  background-repeat: no-repeat;
+
+  /* コンテンツの高さが画像の高さより大きい時、動かないように固定 */
+  background-attachment: fixed;
+
+  /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
+  background-size: cover;
+
+  /* 背景画像が読み込まれる前に表示される背景のカラー */
+  background-color: #464646;
+}
