--- a/LAYOUT/CSS/common.css
+++ b/LAYOUT/CSS/common.css
@@ -9,6 +9,10 @@
   padding: 60px 0 0 0;
 }
 
+html,body {
+    height: 100%;
+}
+
 /****************/
 /* navbar       */
 /****************/
@@ -50,7 +54,8 @@
 /****************/
 .scrollable-menu {
                 height: auto;
-                max-height: 500px;
+                max-height: 100%;
+                /*max-height: 500px;*/
                 overflow-x: hidden;
 }
 
