--- a/LAYOUT/CSS/common.css
+++ b/LAYOUT/CSS/common.css
@@ -16,16 +16,26 @@ html,body {
     margin-bottom:  15px;
 }
 .row {
-    postion:    relative;
+    position:    relative;
 }
 
-.lbl-header-info {
+.lbl-header-info,  {
     text-align: left;
     font-size:  18px;i
     position:   absolute;
     top:        50%;
     margin-top: 17px;
     
+}
+
+.fixed {
+    position:    fixed;
+    z-index:    1
+
+}
+
+.header-under-contents {
+    position:   relative
 }
 
 /****************/
