--- a/LAYOUT/CSS/common.css
+++ b/LAYOUT/CSS/common.css
@@ -13,7 +13,7 @@ html,body {
     height: 100%;
 }
 .container {
-    margin-bottom:  15px;
+    /*margin-bottom:  15px;*/
 }
 .row {
     position:    relative;
@@ -36,6 +36,14 @@ html,body {
 
 .header-under-contents {
     position:   relative
+}
+
+
+/* */
+/* icon */
+/* */
+.glyphicon {
+    font-size:  24px;
 }
 
 /****************/
