パーツカテゴリ分類ディレクトリ導入、カテゴリ削除、パーツNEWまで

--- a/LAYOUT/CSS/common.css
+++ b/LAYOUT/CSS/common.css
@@ -43,7 +43,9 @@ html,body {
 /* icon */
 /* */
 .glyphicon {
-    font-size:  21px;
+    /*
+    font-size:  19px;
+    */ 
 }
 
 .scrollable-menu .glyphicon {
