--- a/LAYOUT/CSS/common.css
+++ b/LAYOUT/CSS/common.css
@@ -95,7 +95,7 @@ html,body {
                 height: auto;
                 max-height: 100%;
                 /*max-height: 500px;*/
-                /*overflow-x: hidden;*/
+                overflow-x: hidden;
 }
 /* サイドメニューの子メニュー*/
 .scrollable-menu .dropdown {
